--- a/.env
+++ b/.env
@@ -1,9 +1,7 @@
 # DATABASE
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
-DB_PORT=
-DB_HOST=
+POSTGRES_USER=transcendence
+POSTGRES_PASSWORD=admin
+POSTGRES_DB=db_transcendence
 
 #BACKEND
 BACKEND_API_URL=
