Updated Makefile and docker-compose.yaml to work with new file structure

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,10 +11,10 @@ services:
       - ./db/data:/var/lib/postgresql/data
   web:
     build:
-      context: ./backend
+      context: ./app
     command: python3 manage.py runserver 0.0.0.0:8000
     volumes:
-      - ./backend:/app
+      - ./app:/app
     depends_on:
       - db
     environment:
