--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     hostname: postgres
     restart: always
     env_file:
-      - .env
+      - app/.env
     volumes:
       - ./db/data:/var/lib/postgresql/data
   web:
