--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,24 @@
-version: '3.8'
 
 services:
   db:
     image: postgres:16.3
-    hostname: postgres
+    container_name: db
+    hostname: db
     restart: always
     env_file:
       - .env
     volumes:
       - ./db/data:/var/lib/postgresql/data
+    networks:
+      - transcendence_network
+    ports:
+      - "5432:5432"
+
   web:
     build:
       context: ./app
+      dockerfile: Dockerfile
+    container_name: web
     command: python3 manage.py runserver 0.0.0.0:8000
     volumes:
       - ./app:/app
@@ -21,7 +28,10 @@ services:
       - DEBUG=True
     ports:
       - "8000:8000"
+    networks:
+      - transcendence_network
 
 networks:
   transcendence_network:
+    name: transcendence_network
     driver: bridge
