update requirements, downgraded python version for better compatibility, production ready 2fa settings, email to env

--- a/.env
+++ b/.env
@@ -7,6 +7,11 @@ POSTGRES_DB=db_transcendence
 BACKEND_API_URL=
 BACKEND_PORT=
 
+#2FA
+EMAIL_DEFAULT_FROM=ft42games+noreply@gmail.com
+EMAIL_USER=ft42games@gmail.com
+EMAIL_PASSWORD=placeholder
+
 #FRONTEND
 FRONTEND_URL=
 FRONTEND_PORT=
