--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -3,3 +3,7 @@ Django==5.1.1
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 sqlparse==0.5.1
+djangorestframework==3.15.2
+djangorestframework-simplejwt>=5.0.0
+setuptools==65.5.0
+pyotp
