changed front nginx config to always serve index, frontend service in compose

--- a/app/frontend/conf/nginx.conf
+++ b/app/frontend/conf/nginx.conf
@@ -24,17 +24,18 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen       80;
-        server_name  frontend_server;
+        listen 80;
+        server_name frontend_server;
 
         location / {
-            root   /usr/share/nginx/html;
-            index  index.html
+            root /usr/share/nginx/html;
+            index index.html;
+            try_files $uri $uri/ /index.html;
         }
 
         # Proxy pass to backend server
         location /api {
-            proxy_pass http://web:8080;
+            proxy_pass http://web:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -42,4 +43,3 @@ http {
         }
     }
 }
-
