--- a/app/frontend/conf/nginx.conf
+++ b/app/frontend/conf/nginx.conf
@@ -10,8 +10,13 @@ events {
 }
 
 http {
-    include       /etc/nginx/mime.types;
+    #include       /etc/nginx/mime.types;
+    include       mime.types;
     default_type  application/octet-stream;
+
+    types {
+        application/javascript  js;
+    }
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
