--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # DATABASE
 POSTGRES_USER=transcendence
 POSTGRES_PASSWORD=admin
-POSTGRES_DB=db_transcendence
+DB_NAME=db_transcendence
 
 #BACKEND
 BACKEND_API_URL=
@@ -10,7 +10,7 @@ BACKEND_PORT=
 #2FA
 EMAIL_DEFAULT_FROM=ft42games+noreply@gmail.com
 EMAIL_USER=ft42games@gmail.com
-EMAIL_PASSWORD=placeholder
+EMAIL_PASSWORD=placeholder #not the real password
 
 #FRONTEND
 FRONTEND_URL=
