--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,8 +23,8 @@ services:
     env_file:
       - app/.env
     command: >
-      sh -c "until nc -z db 5432; do echo 'Waiting for db...'; sleep 1; done;
-             python3 manage.py makemigrations && python3 manage.py migrate && python3 manage.py runserver 0.0.0.0:8000" 
+          sh -c "until nc -z db 5432; do echo 'Waiting for db...'; sleep 1; done;
+                 python3 manage.py makemigrations backend && python3 manage.py migrate && python3 manage.py runserver 0.0.0.0:8000" 
     volumes:
       - ./app:/app
     depends_on:
