--- a/app/frontend/conf/nginx.conf
+++ b/app/frontend/conf/nginx.conf
@@ -15,7 +15,7 @@ http {
     default_type  application/octet-stream;
 
     types {
-        application/javascript  js;
+        #application/javascript  js;
     }
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
