--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -1,5 +1,7 @@
 FROM nginx:alpine
 
+RUN apk add --no-cache gettext
+
 COPY /js  /usr/share/nginx/html/js
 COPY index.html /usr/share/nginx/html/index.html
 COPY /html /usr/share/nginx/html/html
@@ -7,7 +9,7 @@ COPY /bootstrap /usr/share/nginx/html/bootstrap
 COPY /css /usr/share/nginx/html/css
 COPY media /usr/share/nginx/html/media
 
-COPY conf/nginx.conf /etc/nginx/nginx.conf
+COPY conf/nginx.conf /etc/nginx/nginx.conf.template
 
 COPY /TicTacToe /usr/share/nginx/html/TicTacToe
 COPY /pong /usr/share/nginx/html/pong
@@ -16,7 +18,7 @@ COPY conf/init.sh /usr/share/nginx/html/scripts/init.sh
 RUN chmod +x /usr/share/nginx/html/scripts/init.sh
 
 
-EXPOSE 80
+EXPOSE 8001
 
 # Start nginx
 #CMD ["nginx", "-g", "daemon off;"]
