--- a/app/frontend/conf/nginx.conf
+++ b/app/frontend/conf/nginx.conf
@@ -14,10 +14,6 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-    types {
-        #application/javascript  js;
-    }
-
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
@@ -29,7 +25,7 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen 80;
+        listen ${FRONTEND_PORT};
         server_name frontend_server;
 
         location / {
@@ -39,12 +35,12 @@ http {
         }
 
         # Proxy pass to backend server
-        location /api {
-            proxy_pass http://web:8000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+        # location /api {
+        #     proxy_pass http://web:8000;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header X-Forwarded-Proto $scheme;
+        # }
     }
 }
