stats views and ssl

--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -1,6 +1,7 @@
 FROM nginx:alpine
 
 RUN apk add --no-cache gettext
+RUN apk add --no-cache openssl
 
 COPY /js  /usr/share/nginx/html/js
 COPY index.html /usr/share/nginx/html/index.html
@@ -17,6 +18,11 @@ COPY /pong /usr/share/nginx/html/pong
 COPY conf/init.sh /usr/share/nginx/html/scripts/init.sh
 RUN chmod +x /usr/share/nginx/html/scripts/init.sh
 
+RUN mkdir /etc/nginx/ssl
+RUN	openssl req -newkey rsa:4096 -days 42 -nodes -x509  \
+	 -subj "/C=ES/ST=AN/L=Malaga/O=42/OU=42/CN=transcendence/UID=EFDLC" \
+	 -out /etc/nginx/ssl/transcendence.crt \
+	 -keyout /etc/nginx/ssl/transcendence.key
 
 EXPOSE 8001
 
