--- a/app/frontend/conf/nginx.conf
+++ b/app/frontend/conf/nginx.conf
@@ -1,4 +1,3 @@
-# /etc/nginx/nginx.conf
 user  nginx;
 worker_processes  auto;
 
@@ -10,7 +9,6 @@ events {
 }
 
 http {
-    #include       /etc/nginx/mime.types;
     include       mime.types;
     default_type  application/octet-stream;
 
@@ -33,14 +31,25 @@ http {
             index index.html;
             try_files $uri $uri/ /index.html;
         }
+    }
 
-        # Proxy pass to backend server
-        # location /api {
-        #     proxy_pass http://web:8000;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-        # }
+    server {
+        listen ${FRONTEND_PORT_SSL} ssl;
+        server_name frontend_server;
+
+        ssl_certificate /etc/nginx/ssl/transcendence.crt;
+        ssl_certificate_key /etc/nginx/ssl/transcendence.key;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+
+        location / {
+            root /usr/share/nginx/html;
+            index index.html;
+            try_files $uri $uri/ /index.html;
+        }
+
+        if ($scheme != "https") {
+            return 301 https://$host$request_uri;
+        }
     }
 }
