removed http from .example, tournament model fix

--- a/app/frontend/conf/nginx.conf
+++ b/app/frontend/conf/nginx.conf
@@ -31,6 +31,10 @@ http {
             index index.html;
             try_files $uri $uri/ /index.html;
         }
+
+        if ($scheme != "https") {
+            return 301 https://$host$request_uri;
+        }
     }
 
     server {
