removed http from .example, tournament model fix

--- a/.example
+++ b/.example
@@ -3,7 +3,7 @@ POSTGRES_USER=transcendence
 POSTGRES_PASSWORD=******
 POSTGRESS_DB=db_transcendence
 #BACKEND
-BACKEND_API_URL= http://localhost
+BACKEND_API_URL=localhost
 BACKEND_PORT=8000
 #2FA
 EMAIL_DEFAULT_FROM=placeholder@mail.example
@@ -12,6 +12,6 @@ EMAIL_PASSWORD=*****
 #JWT
 JWT_SECRET=*****
 #FRONTEND
-FRONTEND_URL=http://localhost
+FRONTEND_URL=localhost
 FRONTEND_PORT=80
 FRONTEND_PORT_SSL=443
