--- a/app/frontend/conf/nginx.conf
+++ b/app/frontend/conf/nginx.conf
@@ -52,6 +52,30 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
+        location /api/ {
+            # Pass to Django container
+            proxy_pass http://web:${BACKEND_PORT}/; # Replace `web` with your Django service/container name
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # CORS headers  
+            add_header Access-Control-Allow-Origin $http_origin always; # Dynamically match origins
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Authorization, Content-Type, X-CSRFToken" always;
+            add_header Access-Control-Allow-Credentials "true" always;
+
+            # Handle preflight OPTIONS requests
+            if ($request_method = OPTIONS) {
+                add_header Access-Control-Allow-Origin $http_origin always;
+                add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+                add_header Access-Control-Allow-Headers "Authorization, Content-Type, X-CSRFToken" always;
+                add_header Access-Control-Allow-Credentials "true" always;
+                return 204; # No content
+            }
+        }
+
         if ($scheme != "https") {
             return 301 https://$host$request_uri;
         }
